# Genesis-Engine

./: STARTUP_GUIDE.md  config.yaml  demo_grid_war.py  demo_human_override.py  demo_shareholder_primacy.py  demo_sprint10.py  demo_sprint9.py  demo_time_guardian.py  demo_wisdom_mirror.py  main.py  preflight_report.md  pyproject.toml
genesis_engine/: __init__.py
genesis_engine/ai/: __init__.py
genesis_engine/core/: __init__.py  adversarial_evaluator.py  ai_provider.py  architectural_forge.py  aria_interface.py  axiom_anchor.py  axiomlogix.py  continuity_bridge.py  crucible.py  deconstruction_engine.py  dream_engine.py  game_theory_console.py  governance_report.py  mirror_of_truth.py  obsidian_exporter.py  policy_kernel.py  robustness_harness.py  wisdom_mirror.py
genesis_engine/reports/: crucible_result_1.json  crucible_result_2.json  crucible_result_3.json  disharmony_report_1.json  disharmony_report_2.json  disharmony_report_3.json  disharmony_reports_combined.json  forge_artifact_1.json  (+14 more)
scenarios/: grid_war_2026.json
tests/: test_architectural_forge.py  test_aria_interface.py  test_axiom_anchor.py  test_axiomlogix.py  test_bayesian_final_exam.py  test_continuity_bridge.py  test_crucible.py  test_deconstruction_engine.py  test_dream_engine.py  test_final_exam.py  test_foresight_projections.py  test_game_theory_console.py  test_hash_chain.py  test_mirror_of_truth.py  test_obsidian_exporter.py  test_regenerative_forge.py  test_shadow_entities.py  test_sprint10.py  test_sprint11.py  test_sprint9.py  test_sustainability_predicate.py  test_wisdom_mirror.py
(+15 files in other folders)
