[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "genesis-engine"
version = "0.1.0"
description = "The Genesis Engine — A High-Coherence Multi-Agent System Core"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
